force-app/main/default/objects/sfmc_journey_activity_534007695__dll/fields/ActivityObjectID__c.field-meta.xml
<CustomField>
    <fullName>ActivityObjectID__c</fullName>
    <label>Activity ObjectID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ActivityObjectID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>