force-app/main/default/objects/sfmc_journey_activity_534007695__dll/fields/KQ_JourneyID__c.field-meta.xml
<CustomField>
    <fullName>KQ_JourneyID__c</fullName>
    <label>KQ_JourneyID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_JourneyID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>