force-app/main/default/objects/sfmc_journey_activity_534007695__dll/fields/ModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ModifiedDate__c</fullName>
    <label>Modified Date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ModifiedDate</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>