force-app/main/default/objects/sfmc_journey_activity_534007695__dll/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <label>Type Name</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>TypeName</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>